# ai-researcher-agent-tg-bot

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  results.csv
app/: database.py  google_api.py  llm.py  main.py
app/queries/: generic.py  message.py  user.py
