[project]
name = "ai-search-agent-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]
